K8s/GinStart-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ginstart
spec:
#  3个实例
  replicas: 2
  selector:
    matchLabels:
      app: ginstart-service
  template:
    metadata:
      labels:
#        必须和上面的selector名字匹配
        app: ginstart-service
#        Deployment管理的Pod的模板
    spec:
#      一个Pod里面运行的所有container,一个Pod可以有多个container,但一般都是一个
      containers:
        - name: ginstart
          image:  aaa/ginstart:v0.1
          ports:
#            main函数监听的端口
            - containerPort: 8080
