K8s/GinStart-Mysql-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ginstart-mysql
spec:
  selector:
    app: ginstart-mysql
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
  type: LoadBalancer
