K8s/GinStart-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ginstart-service
spec:
  selector:
    app: ginstart-service
  ports:
    - protocol: TCP
      port: 88
      targetPort: 8080
  type: ClusterIP
