K8s/Ginstart-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ginstart-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
#  localhost:80进入的请求就进入 ginstart-service 中处理
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ginstart-service
                port:
                  number: 88
